# aiida-icon

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  LICENSE.txt  README.md  index.html  mkdocs.yml  pyproject.toml  pyproject.toml.orig  sitemap.xml  spack.yaml
.github/workflows/: code-quality.yml  deploy.yml  icon-tests.yml  icon_tests.yml  publish_docs.yml  unittests.yml  zizmor.yml
ci/: Dockerfile  cscs.yml  santis_config.yaml  santis_setup.yaml
docs/: index.md  recipes.md
examples/common/: icon.yaml  santis_config.yaml  santis_setup.yaml  todi_setup.yaml
examples/exclaim_R02B04/: NAMELIST_exclaim_ape_R02B04  icon.yaml  icon_master.namelist  setup_and_run.py  todi_config.yaml  todi_cpu.sh
recipes/: index.html
search/: search_index.json
src/aiida_icon/: __about__.py  __init__.py  builder.py  calculations.py  calcutils.py  exceptions.py  tools.py
src/aiida_icon/calculations/: __init__.py  aquaplanet.py  generic.py
src/aiida_icon/iconutils/: defaults.py  masternml.py  masternml.py.orig  modelnml.py  namelists.py
src/aiida_icon/site_support/cscs/: __init__.py  alps.py  santis.py  todi.py
src/aiida_icon/workflows/: __init__.py  restart.py
submit_test/20250812-00005/.aiida/: calcinfo.json  job_tmpl.json
submit_test/20250812-00007/.aiida/: calcinfo.json
submit_test/20250812-00008/.aiida/: calcinfo.json
submit_test/20250812-00009/.aiida/: calcinfo.json
submit_test/20250812-00011/.aiida/: calcinfo.json
submit_test/20250812-00013/.aiida/: calcinfo.json
submit_test/20250812-00015/.aiida/: calcinfo.json
submit_test/20250812-00017/.aiida/: calcinfo.json
submit_test/20250812-00019/.aiida/: calcinfo.json
submit_test/20250812-00020/.aiida/: calcinfo.json
submit_test/20250812-00021/.aiida/: calcinfo.json
submit_test/20250812-00022/.aiida/: calcinfo.json
submit_test/20250812-00024/: _aiidasubmit.sh
submit_test/20250812-00024/.aiida/: calcinfo.json
submit_test/20250812-00026/.aiida/: calcinfo.json
submit_test/20250812-00028/: icon_master.namelist
submit_test/20250812-00028/.aiida/: calcinfo.json
submit_test/20250812-00030/.aiida/: calcinfo.json
submit_test/20250812-00032/.aiida/: calcinfo.json
submit_test/20250812-00034/.aiida/: calcinfo.json
submit_test/20250812-00036/.aiida/: calcinfo.json
submit_test/20250812-00038/.aiida/: calcinfo.json
submit_test/20250812-00040/.aiida/: calcinfo.json  job_tmpl.json
tests/: __init__.py  conftest.py  test_builder.py  test_calculations.py  test_calcutils.py  utils.py
tests/cases/: test_simple_icon_run.py
tests/compat_tests/: test_v0_1_compat.py  test_v0_4_compat.py
tests/data/archives/: icon_calc_v0.1.aiida  icon_calc_v0.4.aiida
tests/data/common/: model_bar.nml  model_foo.nml  relpath_models.nml
tests/data/restarts_missing/mock-restarts-missing-outputs/: icon_master.namelist
tests/data/restarts_present/inputs/: icon_master.namelist  model.namelist
tests/data/simple_icon_run/inputs/: icon_grid_simple.nc  icon_master.namelist  model.namelist
tests/data/wrapper_script/inputs/: model.namelist
tests/icon_tests/: conftest.py  test_alps.py  test_simple_icon_run.py  test_with_icon.py
tests/test_iconutils/: test_masternml.py  test_modelnml.py
